# big_integer

./: CMakeLists.txt  Makefile  README.md  big_integer.cpp  big_integer.h  big_integer_testing.cpp  opt_vector.cpp  opt_vector.h
gtest/: gtest-all.cc
